[project]
name = "supermechs"
version = "0.1.0"
description = "Package modeling the behavior of the SuperMechs game into python objects."
authors = [
    {name = "Eneg"},
]
dependencies = [
    "attrs >= 22.1.0",            # min_len
    "exceptiongroup >= 1.2.2; python_version < '3.11'",
    "typing-extensions >= 4.4.1", # override
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff >= 0.6.1",
    "pre-commit",
    "ipykernel < 7.0.0, >= 6.29.0",
]

[tool.pdm.build]
includes = ["src/supermechs"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true

select = [
    "ALL",

    # preview
    "RUF022", # sort __all__
]
ignore = [
    "ARG",       # unused parameters
    "COM812",    # don't require commas
    "D1",        # missing docstrings
    "FIX", "TD", # todos
    "N818",      # naming exceptions as *Error
    "PERF203",   # try ... except in loops
    "PIE796",    # non-unique enums (that's a job for @unique)
    "SLF001",    # private member access; handled by pyright
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"] # import *

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
extra-standard-library = ["typing_extensions"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
    "supermechs",
    "supermechs-ext",
]

[tool.ruff.lint.isort.sections]
"supermechs" = ["supermechs"]
"supermechs-ext" = ["supermechs.ext"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions", "supermechs.typeshed"]
runtime-evaluated-decorators = ["attrs.define", "attrs.frozen"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "format", "input", "type"]


[tool.pyright]
include = ["src/supermechs"]
exclude = ["dev"]
pythonVersion = "3.10"

typeCheckingMode = "strict"

reportMissingTypeStubs = false
reportImportCycles = true

reportUnnecessaryTypeIgnoreComment = "information"
reportUnnecessaryIsInstance = "information"

reportMatchNotExhaustive = "warning"
reportOverlappingOverload = "information"
